// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DialogActions组件 快照测试 基本使用 1`] = `
<div
  className="sc-bdvvtL cpgGmO sinoui-dialog-actions"
>
  <button
    className="sc-gsDKAQ WZUMy sinoui-base-button sc-dkPtRN hcpXNN sinoui-button"
    color="primary"
    role="button"
    type="button"
  >
    Disagree
  </button>
  <button
    className="sc-gsDKAQ WZUMy sinoui-base-button sc-dkPtRN hcpXNN sinoui-button"
    color="primary"
    role="button"
    type="button"
  >
    Agree
  </button>
</div>
`;

exports[`DialogActions组件 快照测试 按钮垂直显示 1`] = `
<div
  className="sc-bdvvtL ctMoVz sinoui-dialog-actions"
>
  <button
    className="sc-gsDKAQ WZUMy sinoui-base-button sc-dkPtRN hcpXNN sinoui-button"
    color="primary"
    role="button"
    type="button"
  >
    Disagree
  </button>
  <button
    className="sc-gsDKAQ WZUMy sinoui-base-button sc-dkPtRN hcpXNN sinoui-button"
    color="primary"
    role="button"
    type="button"
  >
    Agree
  </button>
</div>
`;
